--- a/public/html/hoteis.html
+++ b/public/html/hoteis.html
@@ -15,7 +15,7 @@ body {
 .foto img {float:left; margin:0px 15px 0px 5px;}
 .titulo {font-size:1.4em; font-weight:700; color:#ffcc00;} 
 .publicidade {margin: 50px 0 0 0;}
-.box {margin-bottom:20px; clear:both; padding:0px 5px; 10px 0px;}
+.box {margin-bottom:20px; clear:both; padding:0px 5px 10px 0px;}
 
 </style>
 </head>
